tests/type-errors/bad_contract_calling_id.arl
archetype bad_contract_calling_id

contract contract_called_sig {
   action set_value (n : int)
   action add_value (a : int, b : int)
}
variable c : contract_called_sig = @KT1RNB9PXsnp7KMkiMrWNMRzPjuefSWojBAm


action update_value(n : int) {
  effect {
    c.set_value(n)
  }
}

action add_one(n : int) {
  effect {
    transfer 0tz to c call fake_call(0)
  }
}
